Modificado fichero index.html, movido README.md

--- a/my-javascript-app/src/public/index.html
+++ b/my-javascript-app/src/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Hola mundo my-javascript-app!</h1>
-    <a href="../../README.md">Leeme</a>
+    <a href="README.md">Leeme</a>
     
 </body>
 </html>
