Movidos ficheros .js a la carpeta public

--- a/my-javascript-app/src/public/ejercicio5.html
+++ b/my-javascript-app/src/public/ejercicio5.html
@@ -24,7 +24,7 @@
             </ul>
             <p id="txtCalificacion"></p>
         
-        <script src="ejercicio5.js">
+        <script src="js/ejercicio5.js">
         </script>
     </body>
 </html>
