Modificados HTMLs para enlazar con JS

--- a/my-javascript-app/src/public/ejercicio12.html
+++ b/my-javascript-app/src/public/ejercicio12.html
@@ -18,7 +18,7 @@
             Introduzca opción:
         </pre>
         <i>Active las Herramientas del desarrollador</i>
-        <script src="ejercicio12.js">
+        <script src="js/ejercicio12.js">
         </script>
     </body>
 </html>
