--- a/my-javascript-app/src/public/ejercicio6.html
+++ b/my-javascript-app/src/public/ejercicio6.html
@@ -6,7 +6,7 @@
         <h1>Ejercicio 6. Adivina número secreto</h1>
         <p>Realice una aplicación que permita averiguar un número secreto entre 0 y 10, permitiendo que el usuario pueda escoger el número de intentos.</p>
         <b>Intentos: </b><p id="intentos"></p>
-        <script src="ejercicio6.js">
+        <script src="js/ejercicio6.js">
             var intentos=window.prompt('Introduce el número de intentos: ');
             do{
                 intentos--;
