--- a/my-javascript-app/src/public/ejercicio7.html
+++ b/my-javascript-app/src/public/ejercicio7.html
@@ -11,6 +11,6 @@
         <code>Fibonacci(n) = 1 1 2 3 5 8 13 21 34 ...</code>
         <br/><br/><i style="color:red;">Recuerde activar las Herramientas del desarrollador del Navegador Web.</i>
         <p id="salida"></p>
-        <script src="ejercicio7.js"></script>
+        <script src="js/ejercicio7.js"></script>
     </body>
 </html>
