Probando http-server

--- a/my-http-server/hello.html
+++ b/my-http-server/hello.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Hola mundo my-javascript-app!</h1>
+    <h1>Hola mundo my-http-server!</h1>
 </body>
 </html>
