--- a/my-http-server/index.html
+++ b/my-http-server/index.html
@@ -1,9 +1,12 @@
-<html>
-
+<!DOCTYPE html>
 <head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Página Testeando con Selenium</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="./node_modules/bootstrap//dist/js/bootstrap.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./code.js"></script>
     <style>
         @import url("./node_modules/bootstrap/dist/css/bootstrap.min.css");
